Added docker orchestration

--- a/MoviesApi/appsettings.json
+++ b/MoviesApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MoviesApiDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server={{Server}}; Database={{Database}}; User Id={{UserId}}; Password={{Password}}; Trust Server Certificate=True; MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
