--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,25 +8,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+    - name: Build the Docker image
+      working-directory: MoviesApi
+      run: docker build . -t ${{DOCKERHUB_USERNAME}}/movies-api:latest
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v3
+    - name: Log into Docker Hub
+      uses: docker/login-action@v5
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: ./MoviesApi
-        file: ./MoviesApi/Dockerfile
-        push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/movies-api:latest
-
-    - name: Log out from Docker Hub
-      run: docker logout
+    - name: Push the image to Docker Hub
+      run: docker push ${{DOCKERHUB_USERNAME}}/movies-api:latest
