--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,7 +12,7 @@ jobs:
 
     - name: Build the Docker image
       working-directory: MoviesApi
-      run: docker build . -t ${{DOCKERHUB_USERNAME}}/movies-api:latest
+      run: docker build . -t ${{ secrets.DOCKERHUB_USERNAME }}/movies-api:latest
 
     - name: Log into Docker Hub
       uses: docker/login-action@v5
@@ -21,4 +21,4 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Push the image to Docker Hub
-      run: docker push ${{DOCKERHUB_USERNAME}}/movies-api:latest
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/movies-api:latest
