--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,7 +12,7 @@ jobs:
 
     - name: Build the Docker image
       working-directory: MoviesApi
-      run: docker build . -t ${{ secrets.DOCKERHUB_USERNAME }}/movies-api:latest ../
+      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/movies-api:latest -f . ../
 
     - name: Log into Docker Hub
       uses: docker/login-action@v3
