--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,8 +11,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Build the Docker image
-      # working-directory: MoviesApi
-      run: docker build -f "./MoviesApi/Dockerfile" --force-rm -t ${{ secrets.DOCKERHUB_USERNAME }}/movies-api:latest
+      run: docker build ./MoviesApi/Dockerfile -t ${{ secrets.DOCKERHUB_USERNAME }}/movies-api:latest
 
     - name: Log into Docker Hub
       uses: docker/login-action@v3
