--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Build the Docker image
-      run: docker build ./MoviesApi/Dockerfile -t ${{ secrets.DOCKERHUB_USERNAME }}/movies-api:latest
+      run: docker build -f ./MoviesApi/Dockerfile -t ${{ secrets.DOCKERHUB_USERNAME }}/movies-api:latest .
 
     - name: Log into Docker Hub
       uses: docker/login-action@v3
