--- a/deployment-manifest.yaml
+++ b/deployment-manifest.yaml
@@ -1,18 +1,20 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: moviesapi_config
+  name: moviesapi-config
+  namespace: main
 data:
   DB_NAME: MoviesApiDb
   DB_USER: sa
-  DB_HOST: ""
+  DB_HOST: sqlserverdb-service.main.svc.cluster.local
 
 ---
 
 apiVersion: v1
 kind: Secret
 metadata:
-  name: moviesapi_secrets
+  name: moviesapi-secrets
+  namespace: main
 type: Opaque
 data:
   DB_PASSWORD: MVN0cm9uZ1B3ZCEh
@@ -23,6 +25,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: moviesapi
+  namespace: main
 spec:
   replicas: 3
   selector:
@@ -34,28 +37,28 @@ spec:
         app: moviesapi
     spec:
       containers:
-      - name: moviesapi_container
+      - name: moviesapi-container
         image: ivancekikj/movies-api:latest
         ports:
-        - containerPort: 80
+        - containerPort: 8080
         env:
         - name: DB_NAME
           valueFrom:
             configMapKeyRef:
-              name: moviesapi_config
+              name: moviesapi-config
               key: DB_NAME
         - name: DB_USER
           valueFrom:
             configMapKeyRef:
-              name: moviesapi_config
+              name: moviesapi-config
               key: DB_USER
         - name: DB_HOST
           valueFrom:
             configMapKeyRef:
-              name: moviesapi_config
+              name: moviesapi-config
               key: DB_HOST
         - name: DB_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: moviesapi_secrets
+              name: moviesapi-secrets
               key: DB_PASSWORD
