--- a/ingress-manifest.yaml
+++ b/ingress-manifest.yaml
@@ -1,10 +1,10 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: moviesapi_ingress
+  name: moviesapi-ingress
+  namespace: main
   annotations:
     ingress.kubernetes.io/ssl-redirect: "false"
-    traefik.ingress.kubernetes.io/router.middlewares: default-ingress1@kubernetescrd
 spec:
   rules:
   - http:
@@ -13,6 +13,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: moviesapi_service
+            name: moviesapi-service
             port:
-              number: 80
+              number: 8081
