--- a/service-manifest.yaml
+++ b/service-manifest.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: moviesapi_service
+  name: moviesapi-service
+  namespace: main
   labels:
     app: moviesapi
 spec:
@@ -9,6 +10,6 @@ spec:
     app: moviesapi
   ports:
   - protocol: TCP
-    port: 80
-    targetPort: 80
-  type: ClusterIP
+    port: 8081
+    targetPort: 8080
+  type: LoadBalancer
