--- a/storage-manifest.yaml
+++ b/storage-manifest.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: sqlserverdb_secrets
+  name: sqlserverdb-secrets
+  namespace: main
 type: Opaque
 data:
   DB_PASSWORD: MVN0cm9uZ1B3ZCEh
@@ -11,7 +12,8 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: sqlserverdb_config
+  name: sqlserverdb-config
+  namespace: main
 data:
   ACCEPT_EULA: "Y"
 
@@ -21,8 +23,9 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: sqlserverdb
+  namespace: main
 spec:
-  serviceName: sqlserverdb_service
+  serviceName: sqlserverdb-service
   replicas: 1
   selector:
     matchLabels:
@@ -42,20 +45,16 @@ spec:
         - name: ACCEPT_EULA
           valueFrom:
             configMapKeyRef:
-              name: sqlserverdb_config
+              name: sqlserverdb-config
               key: ACCEPT_EULA
         - name: MSSQL_SA_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: sqlserverdb_secrets
+              name: sqlserverdb-secrets
               key: DB_PASSWORD
         volumeMounts:
         - name: mssql-data
           mountPath: /var/opt/mssql
-      volumes:
-      - name: config-volume
-        configMap:
-          name: sqlserver-config
   volumeClaimTemplates:
   - metadata:
       name: mssql-data
@@ -70,11 +69,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: sqlserverdb_service
+  name: sqlserverdb-service
+  namespace: main
 spec:
-  clusterIP: None
+  type: LoadBalancer
   selector:
     app: sqlserver
   ports:
   - port: 1433
+    protocol: TCP
     name: sql
